--- a/src/style.css
+++ b/src/style.css
@@ -6,13 +6,20 @@
 }
 .carousel-inner img {
     width: 100%;
-    max-height: 500px;
+    max-height: 600px;
 }
 .carousel-inner{
-    height: 500px;
+    height: 600px;
    }
 
 footer{
     width: 100%;
     height: auto;
 }
+
+.card-img-top{
+    margin-top: 7%;
+    width: 40%;
+    height: 70%;
+}
+
