--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,15 +9,12 @@ body{
     font-family: 'Lobster';
     
 }
-.carouselExampleCaptions{
-    
-}
 .carousel-inner img {
     width: 100%;
     max-height: 600px;
 }
 .carousel-inner{
-    height: 600px;
+    height: auto;
    }
 
 footer{
@@ -27,6 +24,7 @@ footer{
 
 .card mb-4{
     display: flex;
+    
 }
 .card-img-top{
     margin-top: 7%;
@@ -50,4 +48,7 @@ footer {
     font-family: 'Lobster';
     background: #804000;
     color: #fff;
+}
+img.card-img-top {
+    size: 0.5rem;
 }
