--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -17,7 +17,7 @@ body {
 }
 
 .table {
-
+    
     background-color: bisque;
 }
 
@@ -26,6 +26,8 @@ body {
     margin: 2%;
     gap: 5px;
     background-color: bisque;
+    padding: 5%;
+    margin: 0;
 
 }
 
